[developing]: added - all endpoints; fixed - swagger docs
