# docs/swagger.yaml
@@ -50,10 +50,12 @@ definitions:
         type: string
       description:
         type: string
-      status:
-        type: string
       title:
         type: string
+    required:
+    - deadline
+    - description
+    - title
     type: object
   ds.CreateProjectRequest:
     properties:
@@ -135,6 +137,17 @@ definitions:
       id:
         type: string
       project_id:
+        type: string
+      title:
+        type: string
+    type: object
+  ds.UpdateNotificationRequest:
+    properties:
+      deadline:
+        type: string
+      description:
+        type: string
+      status:
         type: string
       title:
         type: string
@@ -789,6 +802,8 @@ paths:
           description: Internal Server Error
           schema:
             $ref: '#/definitions/app.errorResponse'
+      security:
+      - BearerAuth: []
       summary: Gets All Notifications
       tags:
       - notification
@@ -822,6 +837,8 @@ paths:
           description: Internal Server Error
           schema:
             $ref: '#/definitions/app.errorResponse'
+      security:
+      - BearerAuth: []
       summary: Delete notifications
       tags:
       - notification
@@ -852,6 +869,8 @@ paths:
           description: Internal Server Error
           schema:
             $ref: '#/definitions/app.errorResponse'
+      security:
+      - BearerAuth: []
       summary: Gets Notification
       tags:
       - notification
@@ -864,6 +883,12 @@ paths:
         name: notification_id
         required: true
         type: string
+      - description: Notification information
+        in: body
+        name: data
+        required: true
+        schema:
+          $ref: '#/definitions/ds.UpdateNotificationRequest'
       produces:
       - application/json
       responses:
@@ -885,6 +910,8 @@ paths:
           description: Internal Server Error
           schema:
             $ref: '#/definitions/app.errorResponse'
+      security:
+      - BearerAuth: []
       summary: Update notifications
       tags:
       - notification
@@ -892,7 +919,7 @@ paths:
     put:
       description: Resend notification
       parameters:
-      - description: Section information
+      - description: Deadline info
         in: body
         name: data
         required: true
@@ -1069,6 +1096,8 @@ paths:
           description: Internal Server Error
           schema:
             $ref: '#/definitions/app.errorResponse'
+      security:
+      - BearerAuth: []
       summary: Gets upcoming notifications
       tags:
       - notification
